Issue #2147 - fixes overflowting of long URLs

--- a/webcompat/static/css/src/issues-list.css
+++ b/webcompat/static/css/src/issues-list.css
@@ -23,6 +23,7 @@
 .issue .issue-description {
   padding-left: var(--unit-gap);
   font-size: 1.1em;
+  word-wrap: break-word;
 }
 
 .issue .issue-description * {
